# hashdeep-compare

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: command.rs  common.rs  help.rs  lib.rs  log_entry.rs  log_ops.rs  main.rs  main_impl.rs  nand.rs  partition.rs  partitioner.rs  root.rs  some_vec.rs  sort.rs
src/partitioner/: match_group.rs  match_pair.rs  mod.rs
tests/: hashdeep_result.txt  integration.rs  logged_integration_test_out.txt  logged_integration_tests.rs  only in test1.txt  only in test2.txt  partition_test1.txt  partition_test2.txt  test1 copy.txt  test1.txt  test2.txt
tests/part_files/: 1_full_match_group_in_both_files_file1  1_hashes_match_group_in_both_files_file1  1_hashes_match_group_in_file2_only_file2  1_hashes_match_pair_file1  1_hashes_match_pair_file2  1_name_match_group_in_both_files_file1  1_name_match_group_in_file1_only_file1  1_name_match_group_in_file2_only_file1  1_name_match_pair_file2  dir_move_file2  dir_rename_file2  file_create_file1  file_edit_file2  file_move_file2  file_rename_file2  general_test_file2  general_test_with_log_warnings_file1  general_test_with_log_warnings_file2  hashdeep_log_base  no_matches_file1  no_matches_file2
tests/root_files/: test1_header_not_found.txt  test1_multiple_warnings.txt  test1_success_all_entries_match.txt  test1_success_no_entries_in_input.txt  test1_success_no_entries_match.txt
tests/sort_files/: test1_invalid_log_entry.txt  test1_unexpected_5th_line_content.txt  test1_unexpected_header_line_count.txt  test1_unexpected_version_string.txt  test1_untested_log_format.txt
(+160 files in other folders)
