[package]
name = "hashdeep-compare"
version = "0.3.0"
authors = ["user"]
edition = "2018"

[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.40"
indoc = "1.0.3"
which = "4.1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3.1.0"
pathdiff = "0.2.0"

[features]
integration_test_coverage = []